# gitflux

./: CONTEXT.md  Cargo.toml
crates/gitflux-cli/: Cargo.toml
crates/gitflux-cli/src/: main.rs
crates/gitflux-export/: Cargo.toml
crates/gitflux-export/src/: lib.rs
crates/gitflux-ingestion/: Cargo.toml
crates/gitflux-ingestion/src/: lib.rs
crates/gitflux-preview/: Cargo.toml
crates/gitflux-preview/src/: lib.rs
crates/gitflux-render/: Cargo.toml
crates/gitflux-render/src/: lib.rs
crates/gitflux-scene/: Cargo.toml
crates/gitflux-scene/src/: config.rs  domain.rs  lib.rs  scene.rs
docs/adr/: 0001-use-rust-git-ingestion.md  0002-use-direct-wgpu-rendering.md  0003-delegate-video-encoding-to-ffmpeg.md  0004-use-a-modular-rust-workspace.md
