[package]
name = "gitflux-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gitflux"
path = "src/main.rs"

[dependencies]
gitflux-export.workspace = true
gitflux-ingestion.workspace = true
gitflux-preview.workspace = true
gitflux-render.workspace = true
gitflux-scene.workspace = true
git2.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
