[package]
name = "gitflux-render"
version.workspace = true
edition.workspace = true

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
gitflux-scene.workspace = true
image = { version = "0.25.10", default-features = false, features = ["png"] }
pollster = "0.4.0"
wgpu = "29.0.3"
